packages/next-swc/crates/core/tests/errors/re-export-all-in-page/re-export-default/output.js
export { default, getStaticProps, getStaticPaths } from './other-page';
